src/snapshots/tap_parser__test__escape_pound.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                r#\"\n            TAP version 14\n            1..1\n            ok 1 - test with \\# escaped \\\\ chars # SKIP\n        \"#\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: true
    number: 1
    desc: "test with \\# escaped \\\\ chars"
    directive:
      kind: Skip
      reason: ~
    yaml: []

