src/snapshots/tap_parser__test__plan_at_the_end_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - TestPoint:
          result: true
          number: ~
          desc: this is a dash description - with a dash!
          directive: ~
          yaml: []
      - Plan:
          count: 1
          reason: ~
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

