src/snapshots/tap_parser__test__single_failure_yaml_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - Plan:
          count: 1
          reason: ~
      - TestPoint:
          result: false
          number: 1
          desc: failure
          directive: ~
          yaml:
            - "failure:"
            - "   - why not"
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

