src/snapshots/tap_parser__test__subtest_bare_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - Plan:
          count: 1
          reason: ~
      - Subtest:
          name: ~
          statements:
            - TestPoint:
                result: true
                number: 1
                desc: inside subtest
                directive: ~
                yaml: []
            - Plan:
                count: 1
                reason: ~
          ending:
            result: true
            number: 1
            desc: subtest
            directive: ~
            yaml: []
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

